# DataLock

./: README.md
backend/: pyproject.toml  requirements.txt  requirements_lambda.txt  run_pipeline.py
backend/notebooks/: training_pipeline.ipynb
backend/src/: __init__.py  db.py
backend/src/deploy/: __init__.py  lambda_handler.py  upload_bundle.py
backend/src/exports/: __init__.py  export_hero_assets.py  export_inference_bundle.py  export_model_metadata.py
backend/src/inference/: __init__.py  inference_core.py
frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/heroes/: route.ts
frontend/src/app/api/metadata/: route.ts
frontend/src/app/api/recommend/: route.ts
frontend/src/components/: analytics.tsx  announcement-banner-static.tsx
frontend/src/lib/: analytics.ts  api.ts
frontend/src/types/: deadlock.ts
